sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:4: error: not found: value estBaseTriée
  if (troubase>=1 && !estBaseTriée(troubase-1)) {
                      ^NaiveBaseball:5: error: not enough arguments for method getCouleurJoueur: (x$1: Int, x$2: Int)Int.
Unspecified value parameter x$2.
    if (math.abs(getCouleurJoueur(troubase-1),0)-(troubase-1)<= math.abs(getCouleurJoueur(troubase-1,1)-(troubase-1))) {
                                 ^