sort.baseball.NaiveBaseball.scala.code
override def run() {
  var troubase:Int =getTrouBase()
  var troupo:Int =getTrouPosition()
  if (troubase>=1 && !estBaseTriée(troubase-1)) {
  	if (math.abs(getCouleurJoueur(troubase-1),0)-(troubase-1)<= math.abs(getCouleurJoueur(troubase-1,1)-(troubase-1))) {
      deplace(troubase-1,1)
    }
    else {
      deplace(troubase-1,0)
    }
      }
  else {
    
  }
}
